<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adapter_recipes_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/adapter_recipes_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_vertical"
            android:background="@color/cardBg"
            android:contentDescription="@string/recipes_image_desc"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_baking" />

        <TextView
            android:id="@+id/adapter_recipes_title"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardTextBg"
            android:textColor="@color/cardTextColor"
            android:text="@string/recipes_example_title" />

        <TextView
            android:id="@+id/adapter_recipes_ingredient"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardTextBg"
            android:textColor="@color/cardTextColor"
            android:text="@string/recipes_example_ingredient" />

        <TextView
            android:id="@+id/adapter_recipes_step"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardTextBg"
            android:textColor="@color/cardTextColor"
            android:text="@string/adapter_example_step" />

        <TextView
            android:id="@+id/adapter_recipes_serving"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardTextBg"
            android:textColor="@color/cardTextColor"
            android:text="@string/adapter_example_servings" />
    </LinearLayout>

</android.support.v7.widget.CardView>